--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="header-navgroup">
                 <nav class="header-nav">
-                    <a class="header-nav__link link" href="#">Оплата</a>
+                    <a class="header-nav__link link" href="#">Angeles🌴☀️ I l</a>
                     <a class="header-nav__link link" href="#">Доставка</a>
                     <a class="header-nav__link link" href="#">О нас</a>
                     <a class="header-nav__link link" href="#">Контакты</a>
