--- a/index.html
+++ b/index.html
@@ -166,64 +166,27 @@
 <main>
     <div class="container">
         <article class="article intro">
-            <div id="slick_1" class="slider slider_intro">
-                <div class="intro__item">
-                    <div class="intro__desc">
-                        <h1 class="intro__title">20% скидка</h1>
-                        <h2 class="intro__subtitle">на первый заказ по&nbsp;промокоду <strong>FIRST</strong></h2>
-                    </div>
-                    <div class="intro__picwrap">
-                        <div class="intro__nav intro__nav_prev">
-                            <svg>
-                                <use xlink:href="img/sprite.svg#icon-left"></use>
-                            </svg>
-                        </div>
-                        <div class="intro__nav intro__nav_next">
-                            <svg>
-                                <use xlink:href="img/sprite.svg#icon-right"></use>
-                            </svg>
-                        </div>
-                        <img class="intro__pic" src="./img/intro_1.jpg" alt="">
-                    </div>
-                </div>
-
-                <div class="intro__item">
-                    <div class="intro__desc">
-                        <h2 class="intro__subtitle">по промокоду <strong>FIRST</strong></h2>
-                    </div>
-                    <div class="intro__picwrap">
-                        <div class="intro__nav intro__nav_prev">
-                            <svg>
-                                <use xlink:href="img/sprite.svg#icon-left"></use>
-                            </svg>
-                        </div>
-                        <div class="intro__nav intro__nav_next">
-                            <svg>
-                                <use xlink:href="img/sprite.svg#icon-right"></use>
-                            </svg>
-                        </div>
-                        <img class="intro__pic" src="./img/intro_4.jpg" alt="">
-                    </div>
-                </div>
-                <div class="intro__item">
-                    <div class="intro__desc">
-                        <h2 class="intro__subtitle">50% скидка на первый заказ по промокоду <strong>FIRST</strong></h2>
-                    </div>
-                    <div class="intro__picwrap">
-                        <div class="intro__nav intro__nav_prev">
-                            <svg>
-                                <use xlink:href="img/sprite.svg#icon-left"></use>
-                            </svg>
-                        </div>
-                        <div class="intro__nav intro__nav_next">
-                            <svg>
-                                <use xlink:href="img/sprite.svg#icon-right"></use>
-                            </svg>
-                        </div>
-                        <img class="intro__pic" src="./img/intro_5.jpg" alt="">
-                    </div>
-                </div>
-            </div>
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-ar"></use>
+            </svg>
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-cl"></use>
+            </svg>
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-co"></use>
+            </svg>
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-li"></use>
+            </svg>
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-lo"></use>
+            </svg>
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-sa"></use>
+            </svg>
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-se"></use>
+            </svg>
         </article>
         <article class="article terms">
             <h2 class="terms__title title title_h2">Условия<br>оформления<br>заказа:</h2>
