--- a/index.html
+++ b/index.html
@@ -20,153 +20,10 @@
 
     <link href="css/main.css" rel="stylesheet"/>
 </head>
-<body class="">
-<header>
-    <div class="header">
-        <div class="container">
-            <div class="header-navgroup">
-                <nav class="header-nav">
-                    <a class="header-nav__link link" href="#">Angeles🌴☀️ I l</a>
-                    <a class="header-nav__link link" href="#">Доставка</a>
-                    <a class="header-nav__link link" href="#">О нас</a>
-                    <a class="header-nav__link link" href="#">Контакты</a>
-                </nav>
-                <a href="" class="header-logo header-logo_min"></a>
-                <nav class="header-contact">
-                    <div class="header-contact__address">Г. Хабаровск, ул. Льва Толстого, 1</div>
-                </nav>
-                <div class="header__btn">
-                    <div id="hamburger">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                </div>
-            </div>
-            
-        </div>
-    </div>
-    <div class="container">
-        <div class="subheader">
-            <div class="search">
-                <form action="">
-                    <input class="search__field" type="text" placeholder="Поиск">
-                </form>
-            </div>
-            <a href="" class="header-logo"></a>
-            <div class="action">
-                <a href="" class="btn btn_basket link">
-                    <span class="btn_basket-label">3</span>
-                    <img class="btn__icon" src="./img/icon_basket.svg" alt="">
-                    <span class="btn_basket-text">Корзина</span>
-                </a>
-                <a href="" class="btn btn_login">
-                    <img class="btn__icon" src="./img/icon_user.svg" alt="">
-                    <span class="btn_basket-text">Вход</span>
-                </a>
-            </div>
-        </div>
-        <ul class="nav">
-            <li>
-                <a href="">Спортивное питание</a>
-                <ul>
-                    <li class="nav__back">назад</li>
-                    <li>
-                        <a href="">Аминокислоты</a>
-                        <ul>
-                            <li class="nav__back">назад</li>
-                            <li><a href="">BCAA</a></li>
-                            <li><a href="">Креатин</a></li>
-                            <li><a href="">Аминокислотные комплексы</a></li>
-                            <li><a href="">Карнитин (L&nbsp;-&nbsp;карнитин)</a></li>
-                            <li><a href="">Аргинин</a></li>
-                            <li><a href="">Глютамин</a></li>
-                            <li><a href="">Цитруллин</a></li>
-                            <li><a href="">Бета-аланин</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="">Протеины, гейнеры</a>
-                        <ul>
-                            <li class="nav__back">назад</li>
-                            <li><a href="">Протеины</a></li>
-                            <li><a href="">Гейнеры</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="">Энергия, защита и восстановление</a>
-                        <ul>
-                            <li class="nav__back">назад</li>
-                            <li><a href="">Предтренировочные комплексы</a></li>
-                            <li><a href="">Для связок и суставов</a></li>
-                            <li><a href="">Повышение тестостерона, SARMs</a></li>
-                            <li><a href="">Изотоники</a></li>
-                            <li><a href="">Энергетики</a></li>
-                            <li><a href="">Пептидный комплекс</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="">Витамины и минералы</a>
-                <ul>
-                    <li class="nav__back">назад</li>
-                    <li><a href="">ZMA</a></li>
-                    <li><a href="">Витамины А-К</a></li>
-                    <li><a href="">Минералы</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="">Здоровое питание</a>
-                <ul>
-                    <li class="nav__back">назад</li>
-                    <li>
-                        <a href="">Низкокалорийные и бескалорийные продукты</a>
-                        <ul>
-                            <li class="nav__back">назад</li>
-                            <li><a href="">Джемы, сиропы и топпинги, соусы</a></li>
-                            <li><a href="">Арахисовая паста</a></li>
-                            <li><a href="">Сахарозаменители</a></li>
-                            <li><a href="">Каши, хлопья, гранола</a></li>
-                            <li><a href="">Мука, смеси, клетчатка</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="">Батончики, печенье, чипсы</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="">Аксессуары и экипировка</a>
-                <ul>
-                    <li class="nav__back">назад</li>
-                    <li><a href="">Одежда, обувь</a></li>
-                    <li><a href="">Шейкеры, бутылки и таблетницы</a></li>
-                    <li><a href="">Аксессуары для тренировки</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="">Красота и долголетие</a>
-                <ul>
-                    <li class="nav__back">назад</li>
-                    <li><a href="">Омега</a></li>
-                    <li><a href="">Здоровый сон</a></li>
-                    <li><a href="">Снижение веса</a></li>
-                    <li><a href="">Здоровье и долголетие</a></li>
-                    <li><a href="">Суперфуды</a></li>
-                </ul>
-            </li>
-            <li class="nav-contact">
-                <ul>
-                    <li><a href="">Оплата</a></li>
-                    <li><a href="">Доставка</a></li>
-                    <li><a href="">О нас</a></li>
-                    <li><a href="">Контакты</a></li>
-                </ul>
-                <a class="nav-contact__tel" href="tel:+79154365464">+7 915 436 54 64</a>
-                <div class="nav-contact__address">г. Хабаровск, ул.&nbsp;Льва&nbsp;Толстого,&nbsp;1</div>
-            </li>
-        </ul>
-    </div>
-</header>
+<body class="body">
+<aside class="aside">
+    <a href="#" class="logo"></a>
+</aside>
 <main>
     <div class="container">
         <article class="article intro">
@@ -192,190 +49,14 @@
                 <use xlink:href="img/sprite.svg#icon-se"></use>
             </svg>
         </article>
-        <article class="article terms">
-            <h2 class="terms__title title title_h2">Условия<br>оформления<br>заказа:</h2>
-            <ul class="terms__list">
-                <li>Бесплатная доставка <b>от&nbsp;3000 ₽</b></li>
-                <li>Доставка <b>в течение 24&nbsp;часов</b> в Хабаровске</li>
-                <li>Самовывоз <b>день&nbsp;в&nbsp;день</b> в&nbsp;Хабаровске</li>
-                <li><b>Оплата</b> при получении или онлайн</li>
-            </ul>
-        </article>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium neque delectus quia quaerat mollitia. Eveniet quos, odit excepturi vero sint officiis nemo earum placeat modi expedita hic, voluptates, deleniti sequi.
     </div>
-    <article class="article poster">
-        <div class="container">
-            <div class="poster__list">
-                <div class="poster__item">
-                    <div class="poster__num">>&nbsp;500</div>
-                    <div class="poster__desc">товаров в&nbsp;магазине</div>
-                </div>
-                <div class="poster__item">
-                    <div class="poster__num">>&nbsp;60</div>
-                    <div class="poster__desc">брендов, с которыми работаем</div>
-                </div>
-                <div class="poster__item">
-                    <div class="poster__num">>&nbsp;6</div>
-                    <div class="poster__desc">лет на рынке (с&nbsp;2016&nbsp;года)</div>
-                </div>
-            </div>
-        </div>
-    </article>
-    <div class="container">
-        <article class="article cat">
-            <a href="" class="cat__item">
-                <img class="cat__pic" src="./img/cat_1.jpg" alt="">
-                <span class="cat__name">BCAA</span>
-            </a>
-            <a href="" class="cat__item">
-                <img class="cat__pic" src="./img/cat_2.jpg" alt="">
-                <span class="cat__name">Витамины<br>и минералы</span>
-            </a>
-            <a href="" class="cat__item">
-                <img class="cat__pic" src="./img/cat_3.jpg" alt="">
-                <span class="cat__name">Омега</span>
-            </a>
-            <a href="" class="cat__item">
-                <img class="cat__pic" src="./img/cat_4.jpg" alt="">
-                <span class="cat__name">Печенье</span>
-            </a>
-            <a href="" class="cat__item">
-                <img class="cat__pic" src="./img/cat_5.jpg" alt="">
-                <span class="cat__name">Жиросжигатели</span>
-            </a>
-        </article>
-    </div>
-    <article class="article why">
-        <div class="container">
-            <h2 class="title title_h2">Почему стоит<br>купить у нас?</h2>
-            <div class="why__wrap">
-                <div class="why__desc">
-                    <h3 class="why__title">Самые низкие цены на спортивное питание в Хабаровске.</h3>
-                    <div class="why__text">
-                        Мы стараемся отслеживать все цены 
-                        в Хабаровске и делаем цены в нашем магазине выгоднее, чем у других.
-                    </div>
-                </div>
-                <div class="why__desc">
-                    <h3 class="why__title">Оригинальная продукция.</h3>
-                    <div class="why__text">
-                        Вы можете проверить оригинальность продукции по серийному номеру 
-                        на упаковке, а также мы можем предоставить договоры и сертификаты, подтверждающие подлинность товаров.
-                    </div>
-                </div>
-                <div class="why__pic"><img src="./img/why.jpg" alt=""></div>
-            </div>
-        </div>
-    </article>
-    <div class="container">
-        <article class="article review">
-            <div id="slick_2" class="slider slider_review">
-                <div class="review__item">
-                    <div class="review__picwrap">
-                        <img src="./img/icon_male.svg" alt="" class="review__pic">
-                    </div>
-                    <div class="review__name">Татьяна булановаТатьяна буланова</div>
-                    <div class="review__text">
-                        Отличное средство тонуса, когда силы тебя совсем покидают. Хороший энергетик, производится в России, найти его можно на полках спортивного питания.
-                    </div>
-                </div>
-                <div class="review__item">
-                    <div class="review__picwrap">
-                        <img src="./img/icon_female.svg" alt="" class="review__pic">
-                    </div>
-                    <div class="review__name">Валерий леонтьев</div>
-                    <div class="review__text">
-                        Отличное средство тонуса, когда силы тебя совсем покидают. Хороший энергетик, производится в России, найти его можно на полках спортивного питания.Отличное средство тонуса, когда силы тебя совсем покидают. Хороший энергетик, производится в России, найти его можно на полках спортивного питания.
-                    </div>
-                </div>
-                <div class="review__item">
-                    <div class="review__picwrap">
-                        <img src="./img/icon_male.svg" alt="" class="review__pic">
-                    </div>
-                    <div class="review__name">Филипп киркоров</div>
-                    <div class="review__text">Отличное средство.</div>
-                </div>
-            </div>
-            <div class="ac">
-                <a href="" class="btn btn_big">Читать больше на 2gis</a>
-            </div>
-        </article>
-        <article class="article popular">
-            <h2 class="title title_h2">Самое популярное</h2>
-            <div class="popular__list">
-                <a href="" class="popular__item">
-                    <span class="popular__picwrap">
-                        <img class="popular__pic" src="./img/product_1.jpg" alt="">
-                    </span>
-                    <span class="popular__name">Омега</span>
-                </a>
-                <a href="" class="popular__item">
-                    <span class="popular__picwrap">
-                        <img class="popular__pic" src="./img/product_2.png" alt="">
-                    </span>
-                    <span class="popular__name">Отличное средство тонуса, когда силы тебя совсем покидают</span>
-                </a>
-                <a href="" class="popular__item">
-                    <span class="popular__picwrap">
-                        <img class="popular__pic" src="./img/product_3.jpg" alt="">
-                    </span>
-                    <span class="popular__name">Витамины и минералы</span>
-                </a>
-                <a href="" class="popular__item">
-                    <span class="popular__picwrap">
-                        <img class="popular__pic" src="./img/product_4.jpg" alt="">
-                    </span>
-                    <span class="popular__name">Батончики и печенье</span>
-                </a>
-                <a href="" class="popular__item">
-                    <span class="popular__picwrap">
-                        <img class="popular__pic" src="./img/product_5.jpg" alt="">
-                    </span>
-                    <span class="popular__name">Витамины</span>
-                </a>
-                <a href="" class="popular__item">
-                    <span class="popular__picwrap">
-                        <img class="popular__pic" src="./img/product_6.png" alt="">
-                    </span>
-                    <span class="popular__name">BCAA</span>
-                </a>
-            </div>
-        </article>
-    </div>
-</main>
 
-<footer class="footer">
-    <div class="container">
-        <div class="footer__menu">
-            <a href="#" class="footer__logo"></a>
-            <div class="footer__nav">
-                <nav class="footer__nav-col">
-                    <a class="footer__nav-link" href="#">Оплата</a>
-                    <a class="footer__nav-link" href="#">Доставка</a>
-                    <a class="footer__nav-link" href="#">О нас</a>
-                    <a class="footer__nav-link" href="#">Контакты</a>
-                </nav>
-                <nav class="footer__nav-col">
-                    <a class="footer__nav-link" href="#">оферта</a>
-                    <a class="footer__nav-link" href="#">политика<br>конфиденциальности</a>
-                    <a class="footer__nav-link" href="#">Сертификаты</a>
-                </nav>
-            </div>
-            <div class="footer-contact">
-                <a class="footer-contact__tel" href="tel:+79154365464">+7 915 436 54 64</a>
-                <div class="footer-contact__address">Г. Хабаровск, ул.&nbsp;Льва&nbsp;Толстого,&nbsp;1</div>
-            </div>
-        </div>
-        <div class="footer__copy">
-            © 2022 VItahit. Дизайн&nbsp;<div class="footer__copylink"><a href="https://web-off.ru" target="_blank">web-off.ru</a></div>
-        </div>
-    </div>
-</footer>
-<div class="scroll-top"></div>
+</main>
 
 
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/slick.js"></script>
-<script src="js/jquery.easing.min.js"></script>
 <script src="js/custom.js"></script>
 
 </body>
