--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
 <body class="body">
 <aside class="aside">
     <a href="#" class="logo"></a>
+    <div class="app-group">
+        <a href="#" class="app app_play"></a>
+        <a href="#" class="app app_app"></a>
+    </div>
 </aside>
-<main>
+<main class="main">
     <div class="container">
         <article class="article intro">
             <svg>
