--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
 <body class="body">
 <aside class="aside">
     <a href="#" class="logo"></a>
+    <div class="login">
+        <img class="login__icon" src="./img/login.svg" alt="">
+        Log in
+    </div>
+    <hr>
     <div class="app-group">
-        <a href="#" class="app app_play"></a>
-        <a href="#" class="app app_app"></a>
+        <div class="app app_play"></div>
+        <div class="app app_app"></div>
     </div>
 </aside>
 <main class="main">
