--- a/profile.html
+++ b/profile.html
@@ -63,18 +63,18 @@
                         books and share my life experiences!
                     </div>
                     <div class="user__action">
-                        <div class="btn">
+                        <button class="btn">
                             <svg>
                                 <use xlink:href="img/sprite.svg#icon-fo"></use>
                             </svg>
                             Follow
-                        </div>
-                        <div class="btn btn_light">
+                        </button>
+                        <button class="btn btn_light">
                             <svg>
                                 <use xlink:href="img/sprite.svg#icon-me"></use>
                             </svg>
                             Message
-                        </div>
+                        </button>
                     </div>
                     <div class="tab">
                         <div class="btn btn_light">All</div>
