--- a/profile.html
+++ b/profile.html
@@ -95,13 +95,13 @@
                                 <svg>
                                     <use xlink:href="img/sprite.svg#icon-li"></use>
                                 </svg>
-                                1.4k
+                                <span>1.4k</span>
                             </div>
-                            <div class="post__btn">
+                            <div class="post__btn post__btn_co">
                                 <svg>
                                     <use xlink:href="img/sprite.svg#icon-co"></use>
                                 </svg>
-                                352
+                                <span>352</span>
                             </div>
                         </div>
                         <div class="post__action-group">
@@ -126,7 +126,10 @@
                     <a href="" class="post__all">See all comments (352)</a>
                 </div>
                 <!-- end block for ajax -->
-                <div class="btn">Load more</div>
+                <div class="ac">
+                    <div class="btn btn_center">Load more</div>
+                </div>
+                
             </div>
         </article>
 
