--- a/profile.html
+++ b/profile.html
@@ -135,7 +135,19 @@
 
 
     </main>
-
+    <div class="modal-bg ">
+        <div class="modal">
+            <div class="modal__body">
+                <div class="modal__logo"></div>
+                <div class="modal__desc">If you want to see more information, download Katharsis App:</div>
+                <div class="modal__action">
+                    <a href="" class="modal_btn modal_btn-app"></a>
+                    <a href="" class="modal_btn modal_btn-pla"></a>
+                </div>
+                <div class="modal__close"></div>
+            </div>
+        </div>
+    </div>
 
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/slick.js"></script>
