--- a/profile.html
+++ b/profile.html
@@ -161,6 +161,7 @@
         <div class="modal__body">
             <div class="modal__logo"></div>
             <div class="modal__desc">If you want to see more information, download Katharsis App:</div>
+            <div class="modal__desc modal__desc_min">Download App:</div>
             <div class="modal__action">
                 <a href="" class="modal_btn modal_btn-app"></a>
                 <a href="" class="modal_btn modal_btn-pla"></a>
