--- a/profile.html
+++ b/profile.html
@@ -31,8 +31,8 @@
         </div>
         <hr>
         <div class="app-group">
-            <div class="app app_play"></div>
-            <div class="app app_app"></div>
+            <a href="" class="app app_play"></a>
+            <a href="" class="app app_app"></a>
         </div>
         <button class="btn btn_head">
             Download app
@@ -144,7 +144,7 @@
                         bustle of everyday life and just enjoy each other's company.
                         <div class="post__more">more</div>
                     </div>
-                    <a href="" class="post__all">See all comments (352)</a>
+                    <a href="#" class="post__all">See all comments (352)</a>
                 </div>
                 <!-- end block for ajax -->
                 <div class="ac">
