--- a/profile.html
+++ b/profile.html
@@ -227,7 +227,7 @@
                         </div>
                     </div>
                     <div class="post__video">
-                        <video width="100%" controls>
+                        <video controls>
                             <source src="./img/mp4.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -287,7 +287,7 @@
                         </div>
                     </div>
                     <div class="post__video">
-                        <video width="100%" controls>
+                        <video controls>
                             <source src="./img/mp4_horisontal.mp4" type="video/mp4">
                         </video>
                     </div>
