--- a/profile.html
+++ b/profile.html
@@ -289,14 +289,16 @@
                         </div>
                     </div>
                     <div class="post__video">
-                        <video id="my-video"
-                        class="video-js"
-                        controls
-                        preload="auto"
-                        width="100%"
-                        height="360"
-                        poster="MY_VIDEO_POSTER.jpg"
-                        data-setup="{}">
+                        <video 
+                            id="my-video"
+                            class="video-js"
+                            controls
+                            preload="auto"
+                            width="100%"
+                            height="360"
+                            poster="MY_VIDEO_POSTER.jpg"
+                            data-setup="{}"
+                        >
                             <source src="./img/mp4.mp4" type="video/mp4">
                         </video>
                     </div>
