--- a/profile.html
+++ b/profile.html
@@ -294,9 +294,8 @@
                             class="video-js"
                             controls
                             preload="auto"
-                            width="100%"
-                            height="360"
-                            poster="MY_VIDEO_POSTER.jpg"
+                            poster="./img/poster.jpg2"
+                            muted="muted"
                             data-setup="{}"
                         >
                             <source src="./img/mp4.mp4" type="video/mp4">
