--- a/profile.html
+++ b/profile.html
@@ -298,7 +298,7 @@
                             muted="muted"
                             data-setup="{}"
                         >
-                            <source src="./img/mp4.mp4" type="video/mp4">
+                            <source src="./img/mp4_horisontal.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="post__action">
