--- a/profile.html
+++ b/profile.html
@@ -298,6 +298,19 @@
                             muted="muted"
                             data-setup="{}"
                         >
+                            <source src="./img/mp4.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="post__video">
+                        <video 
+                            id="my-video"
+                            class="video-js"
+                            controls
+                            preload="auto"
+                            poster="./img/poster.jpg2"
+                            muted="muted"
+                            data-setup="{}"
+                        >
                             <source src="./img/mp4_horisontal.mp4" type="video/mp4">
                         </video>
                     </div>
