--- a/profile.html
+++ b/profile.html
@@ -231,7 +231,7 @@
                             class="video-js"
                             controls
                             preload="auto"
-                            poster="./img/poster.jpg2"
+                            poster="./img/poster.jpg"
                             muted="muted"
                             data-setup="{}"
                         >
@@ -301,7 +301,7 @@
                             class="video-js"
                             controls
                             preload="auto"
-                            poster="./img/poster.jpg2"
+                            poster="./img/poster_horisontal.jpg"
                             muted="muted"
                             data-setup="{}"
                         >
