--- a/profile.html
+++ b/profile.html
@@ -374,6 +374,10 @@
                                 <use xlink:href="img/sprite.svg#icon-pa"></use>
                             </svg>
                         </div>
+                        <audio id="audio_example" class="video-js vjs-default-skin" controls preload="auto" 
+                            width="600" height="600" poster="/img/awesome-album-art.png" data-setup='{}'>
+                            <source src="./img/mp3.mp3" type='audio/mp3'/>
+                        </audio>
                         <audio class="audio" controls>
                             <source src="./img/mp3.mp3" type="audio/mpeg"/>
                         </audio>
