--- a/profile.html
+++ b/profile.html
@@ -233,6 +233,7 @@
                             preload="auto"
                             poster="./img/poster.jpg"
                             muted="muted"
+                            playsinline="playsinline"
                             data-setup="{}"
                         >
                             <source src="./img/mp4.mp4" type="video/mp4">
@@ -303,6 +304,7 @@
                             preload="auto"
                             poster="./img/poster_horisontal.jpg"
                             muted="muted"
+                            playsinline="playsinline"
                             data-setup="{}"
                         >
                             <source src="./img/mp4_horisontal.mp4" type="video/mp4">
