--- a/profile.html
+++ b/profile.html
@@ -443,6 +443,7 @@
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/slick.js"></script>
     <script src="js/video.js"></script>
+    <script src="js/isInViewport.min.js"></script>
     <script src="js/custom.js"></script>
 
 </body>
