--- a/profile.html
+++ b/profile.html
@@ -230,7 +230,7 @@
                         <video 
                             class="video-js"
                             controls
-                            preload="auto"
+                            preload="none"
                             poster="./img/poster.jpg"
                             muted="muted"
                             playsinline="playsinline"
@@ -301,7 +301,7 @@
                         <video 
                             class="video-js"
                             controls
-                            preload="auto"
+                            preload="none"
                             poster="./img/poster_horisontal.jpg"
                             muted="muted"
                             playsinline="playsinline"
