--- a/profile.html
+++ b/profile.html
@@ -376,7 +376,7 @@
                                 <use xlink:href="img/sprite.svg#icon-pa"></use>
                             </svg>
                         </div>
-                        <audio class="video-js vjs-default-skin" controls preload="auto" 
+                        <audio class="video-js vjs-default-skin" controls preload="none" 
                              poster="/img/awesome-album-art.png" data-setup='{}'>
                             <source src="./img/mp3.mp3" type='audio/mp3'/>
                         </audio>
