--- a/post_slider.html
+++ b/post_slider.html
@@ -98,6 +98,7 @@
                     </div>
                     <a href="#" class="post__all">See all comments (352)</a>
                 </div>
+                
                 <!-- end block for ajax -->
             </div>
         </article>
@@ -119,6 +120,7 @@
     </div>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/slick.js"></script>
+    <script src="js/video.js"></script>
     <script src="js/custom.js"></script>
 
 </body>
