--- a/profile.html
+++ b/profile.html
@@ -447,7 +447,7 @@
                         </div>
                         <audio class="video-js vjs-default-skin" controls preload="none" 
                              poster="/img/awesome-album-art.png" data-setup='{}'>
-                            <source src="./img/mp3.mp3" type='audio/mp3'/>
+                            <source src="./img/mp3_2.mp3" type='audio/mp3'/>
                         </audio>
                     </div>
                     <div class="post__action">
