--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="post__audio">
+                    <div class="post__audio" style="background: url(img/microphone.svg) center center no-repeat, linear-gradient(41.19deg, #7321E8 9.55%, #EAAAFA 95.15%), #D9D9D9;">
                         <div class="pauseplay">
                             <svg class="play">
                                 <use xlink:href="img/sprite.svg#icon-pl"></use>
@@ -436,7 +436,7 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="post__audio">
+                    <div class="post__audio" style="background: url(img/post_1.jpg) no-repeat center center / cover">
                         <div class="pauseplay">
                             <svg class="play">
                                 <use xlink:href="img/sprite.svg#icon-pl"></use>
