--- a/error.html
+++ b/error.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <title>Profile Private</title>
+    <title>Error</title>
 
 
 
@@ -24,7 +24,7 @@
 
 <body class="body">
     <aside class="aside">
-        <a href="#" class="logo" title="logo"></a>
+        <a href="#" class="logo"></a>
         <div class="login">
             <img class="login__icon" src="./img/login.svg" alt="">
             Log in
@@ -41,45 +41,12 @@
     <main class="main">
         <article class="page">
             <div class="container">
-                <div class="user">
-                    <div class="user__nick">emily_design</div>
-                    <div class="user__main">
-                        <div class="user__follow">
-                            <div class="user__follow-inner">
-                                <div class="user__follow-count">277</div>
-                                <div class="user__follow-label">Following</div>
-                            </div>
-                        </div>
-                        <div class="user__ava user__ava_online">
-                            <img src="./img/avatar.jpg" alt="" class="user__pic">
-                        </div>
-                        <div class="user__follow user__follow_right">
-                            <div class="user__follow-inner">
-                                <div class="user__follow-count">7 325</div>
-                                <div class="user__follow-label">Followers</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user__name">
-                        Emily Jhonson
-                        <img src="./img/icon_verified.png" alt="" class="user__verified">
-                    </div>
-                    <div class="user__about">
-                        UI/UX Designer. Based in Los Angeles🌴☀️ I love walking, reading
-                        books and share my life experiences!
-                    </div>
-                    <div class="window">
-                        <h3 class="window-title">This profile is private</h3>
-                        <p class="window-desc">You need to follow this account to see photos and videos</p>
-                        <button class="btn">
-                            <svg>
-                                <use xlink:href="img/sprite.svg#icon-fo"></use>
-                            </svg>
-                            Follow
-                        </button>
-                    </div>
+                <!-- start block for ajax -->
+                <div class="window">
+                    <img class="window-icon" src="./img/error.svg" alt="">
+                    <p class="window-desc">If you want to see more information, download Katharsis App: You need to follow this account to see photos and videos</p>
                 </div>
-
+                <!-- end block for ajax -->
             </div>
         </article>
 
@@ -101,7 +68,6 @@
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/slick.js"></script>
     <script src="js/video.js"></script>
-    <script src="js/isInViewport.min.js"></script>
     <script src="js/custom.js"></script>
 
 </body>
