--- a/promo/index.html
+++ b/promo/index.html
@@ -27,7 +27,7 @@
             align-items: center;
             justify-content: center;
             position: relative;
-            background: #fff url(./img/page_bg.png) center top / cover no-repeat;
+            background: #fff url(./img/page_bg.png) center top / 100% 540px no-repeat;
             font-family: Verdana 
         }
         main{
