--- a/terms.html
+++ b/terms.html
@@ -957,8 +957,30 @@
                                             ТАКОГО ВРЕДА. </span></li>
                                 </ul></span></li>
                     </ul>
-
-
+                    <h4>9. Заключительные положения</h4>
+                    <ul class="listing">
+                        <li><span><b>9.1.</b> Настоящие Правила составляют соглашение между Пользователем и
+                                Администрацией Сайта относительно порядка использования Сайта и его функциональности и
+                                заменяют собой все предыдущие соглашения между Пользователем и Администрацией. </span>
+                        </li>
+                        <li><span><b>9.2.</b> Настоящие Правила регулируются и толкуются в соответствии с
+                                законодательством Российской Федерации. Вопросы, не урегулированные Правилами, подлежат
+                                разрешению в соответствии с законодательством Российской Федерации. </span></li>
+                        <li><span><b>9.3.</b> В случае возникновения любых споров или разногласий, связанных с
+                                исполнением настоящих Правил, Пользователь и Администрация Сайта приложат все усилия для
+                                их разрешения путем проведения переговоров между ними. В случае, если споры не будут
+                                разрешены путем переговоров, споры подлежат разрешению в порядке, установленном
+                                действующим законодательством Российской Федерации. </span></li>
+                        <li><span><b>9.4.</b> Настоящие Правила вступают в силу для Пользователя с момента его
+                                присоединения к ним и действуют в течение неопределённого срока. </span></li>
+                        <li><span><b>9.5.</b> Настоящие Правила составлены на русском языке и могут быть предоставлены
+                                Пользователю для ознакомления на другом языке. В случае расхождения русскоязычной версии
+                                Правил и версии Правил на ином языке, применяются положения русскоязычной версии
+                                настоящих Правил. </span></li>
+                        <li><span><b>9.6.</b> Если по тем или иным причинам одно или несколько положений настоящих
+                                Правил будут признаны недействительными или не имеющими юридической силы, это не
+                                оказывает влияния на действительность или применимость остальных положений. </span></li>
+                    </ul>
 
 
 
